# ANCE

./: .gitignore  README.md  pyproject.toml  slurm_run_ann_data_gen.sh  slurm_run_train.sh  slurm_train_bm25.sh
commands/: data_download.sh  run_ann_data_gen.sh  run_inference.sh  run_train.sh
data/: msmarco_data.py
drivers/: run_ann.py  run_ann_data_gen.py  run_ann_data_gen_dpr.py  run_ann_dpr.py  run_warmup.py
evaluation/: Calculate Metrics.ipynb
utils/: eval_mrr.py  util.py
