[tool.poetry]
name = "ance"
version = "0.1.0"
description = ""
authors = ["Anthony Chen <anthonc9@uci.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "2.3.0"
pytrec-eval = "^0.5"
faiss-cpu = "^1.7.2"
wget = "^3.2"
tqdm = "^4.64.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
tokenizers = "^0.12.1"
tensorboardX = "^2.5"
tensorboard = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
